chore: opmitized code